# FABLE

./: .gitignore  Dockerfile  README.md  RESEARCH_LOG.md  SECURITY_AUDIT_STATE.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/agents/: adversarial.py  agent_service.py  roles.py
backend/api/: limiter.py  main.py  schemas.py
backend/api/routes/: auth_openrouter.py  benchmark.py  config.py  experiment.py  export.py  graph.py  identity.py  ingest.py  run.py
backend/chains/: __init__.py  standard_chain.py
backend/core/: adversarial_lifecycle.py  auth.py  bus.py  bus_distributed.py  byok.py  concurrency.py  config.py  cost.py  credentials.py  crypto.py  elm_router.py  embeddings.py  guardrails.py  identity.py  knowledge_engine.py  lifecycle.py  memory_service.py  pii.py  serialization.py  summarizer.py  telemetry.py  tracing.py
backend/domains/code_review/: plugin.py
backend/domains/finance/: plugin.py
backend/elm/: __init__.py  cache.py  declarations.py  engine.py  fallback.py  prompts.py
backend/evaluation/: export_kaggle.py  export_notebook.py  verdict.py
backend/experiment/: montecarlo.py
backend/graph/: __init__.py  adversarial_graph.py
backend/rag/: agentic.py  extract.py  ingest.py  pipeline.py  seed_corpus.py  sources.py
backend/router/: model_router.py
benchmarks/: BENCHMARK_RESULTS.md  benchmark_v1.yaml
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: ByokModal.tsx  HistorySidebar.tsx
frontend/src/components/composer/: Composer.tsx
frontend/src/components/dashboard/: ConsensusHeatmap.tsx  CostBreakdown.tsx  DashSidebar.tsx  DashboardShell.tsx  FeasibilityCard.tsx  FilterRail.tsx  KaggleExportModal.tsx  KpiCard.tsx  LatencyDistribution.tsx  PiiModeCard.tsx  RateLimitCard.tsx  RedactionPreview.tsx  ScoreByCategoryChart.tsx  TraceWaterfallPro.tsx  theme.ts
frontend/src/components/graph/: PlanetaryGraph.tsx  useForceLayout.ts
frontend/src/components/panels/: AgentThread.tsx  ExperimentView.tsx  UserPromptBubble.tsx  WarRoom.tsx
frontend/src/components/panels/warroom/: AgentCharacter.tsx  AgentDetailCard.tsx  RoundTable.tsx  Scoreboard.tsx  SpeechBubble.tsx  VerdictBanner.tsx
frontend/src/components/ui/: GlassPanel.tsx  PillSwitcher.tsx  ScorePills.tsx  SegmentedToggle.tsx  StatusPill.tsx
frontend/src/lib/: api.ts  history.ts
frontend/src/pages/: _app.tsx  dashboard.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: d3-force-3d.d.ts
infra/docker/: Dockerfile.agent-group  Dockerfile.coordinator  docker-compose.k8s-build.yaml
infra/k8s/: kind-config.yaml  setup.sh  teardown.sh
infra/k8s/base/: kustomization.yaml  namespace.yaml
infra/k8s/base/coordinator/: deployment.yaml  service.yaml
infra/k8s/base/execution-pod/: deployment.yaml  service.yaml
infra/k8s/base/planning-pod/: deployment.yaml  service.yaml
infra/k8s/base/review-pod/: deployment.yaml  service.yaml
infra/k8s/base/shared/: configmap-models.yaml  hpa-execution.yaml  hpa-planning.yaml  hpa-review.yaml  secret-api-keys.yaml
infra/k8s/overlays/local/: kustomization.yaml
infra/supabase/: schema.sql
paper/: fable_neurips2026.tex
scripts/: benchmark_v1.py  download_elm_model.py  eval_runs.py  seed_rag.py
scripts/benchmark/: __init__.py  datasets.py  grader.py  providers.py  report.py  run_benchmark.py  runner.py  stats.py
tests/unit/: test_agentic_rag.py  test_benchmark.py  test_rag.py  test_security.py
