[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fable-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "openai>=1.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.1",
    "transformers>=4.41.2",
    "faiss-cpu==1.9.0.post1",
    "nbformat>=5.10.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
