[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fable-backend"
version = "0.1.0"
description = "F.A.B.L.E Backend"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "structlog",
    # P6b: dropped sentence-transformers (+torch +transformers +huggingface-hub)
    # in favor of OpenAI text-embedding-3-small via the existing `openai` SDK.
    "faiss-cpu",
    "numpy",
    # Multi-user platform (P2)
    "supabase",
    "httpx",
    "pyjwt[crypto]",
    "cryptography",
    # Privacy + identity (P4a / P6a)
    # P6a swapped Presidio + spaCy for regex + LLM extraction to fit free-tier deploy targets.
    "itsdangerous",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]
